[workspace]
    members = ["finished/*", "problems/*", "utilities"]

    resolver = "2"

    [workspace.package]
        authors      = ["Jade Lynn Masker <donottellmetonottellyou@gmail.com>"]
        edition      = "2021"
        publish      = false
        rust-version = "1.58.1"

    [workspace.dependencies]
        rand = "0.6.*"

        utilities = { path = "./utilities" }
