[package]
    name              = "utilities"
    version.workspace = true

    description = "Utilities to make testing leetcode problems easier."

    authors.workspace      = true
    edition.workspace      = true
    publish.workspace      = true
    rust-version.workspace = true

[dependencies]
